test/samples/error/err_incompatible_op_relational.w
var x = "1" > [1.0]