test/samples/error/err_incompatible_op_relational.output
error: line 1:8 incompatible operand types (string > [])